src/test/deca/context/valid/personal/instanceof.deca
// Description:
//    instanceof usage normal
//
// Resultats:
//    
// 
// Historique:
//    cree le 14/01/2025

class A {

}
{
    A a;
    boolean b1 = null instanceof A;
    boolean b2 = a instanceof A;
    
}