src/test/deca/context/invalid/field_void_type.deca
// Description:
//    Programme declarant une variable 2 fois.
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : The type as already been define for the variable x
//
// Historique:
//    cree le 19/01/2025

class A{   
   void x;
   
}